# tidy-json

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: bench.yml  lint.yml  pr.yml  release.yml  test.yml
benches/: sort_benchmark.rs
docs/: release-process.md
src/: files.rs  generate_test_files.rs  lib.rs  main.rs  sort.rs
src/snapshots/: tidy_json__sort__tests__should_apply_uniform_indent.snap  tidy_json__sort__tests__sort_json_array_of_objects.snap  tidy_json__sort__tests__sort_json_key_length_asc.snap  tidy_json__sort__tests__sort_json_key_length_desc.snap  tidy_json__sort__tests__sort_json_line_length.snap  tidy_json__sort__tests__sort_json_nested.snap  tidy_json__sort__tests__sort_json_nested_depth_1.snap  tidy_json__sort__tests__sort_json_preserve_array.snap  tidy_json__sort__tests__sort_json_reverse_simple.snap  tidy_json__sort__tests__sort_json_simple.snap  tidy_json__tests__should_apply_uniform_indent.snap  tidy_json__tests__should_apply_uniform_indent.snap.new  tidy_json__tests__should_sort_correctly.snap.new  tidy_json__tests__should_sort_descending.snap  tidy_json__tests__should_sort_descending.snap.new
tests/: cli.rs  cli_behavior.rs  cli_depth.rs  cli_gitignore.rs  cli_indent.rs  cli_jsonc.rs  cli_order.rs
tests/common/: mod.rs
tests/common/snapshots/: cli__common__assert_file_content-2.snap  cli__common__assert_file_content-5.snap  cli__common__assert_file_content-6.snap.new  cli_depth__common__assert_file_content-2.snap  cli_depth__common__assert_file_content.snap
tests/snapshots/: cli__assert_file_content-3.snap  cli__assert_file_content-4.snap  cli__excludes_flag_processes_non_excluded_files-2.snap  cli_depth__sorts_correctly_with_depth_arg.snap  cli_depth__sorts_correctly_without_depth_arg.snap  cli_gitignore__gitignored_files_successfully_ignored-2.snap  cli_gitignore__gitignored_files_successfuly_ignored.snap  cli_indent__applies_correct_indent-2.snap  cli_indent__applies_correct_indent-3.snap  cli_indent__applies_correct_indent-4.snap  cli_indent__applies_correct_indent.snap  cli_indent__does_not_affect_spaces_in_values.snap  cli_jsonc__jsonc_comment_output_snapshot.snap
