[package]
name = "tidy-json"
version = "0.1.0"
edition = "2021"
default-run = "tidy-json"

[[bin]]
name = "generate_test_files"
path = "src/generate_test_files.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.5"
colored = "2.0"
rand = "0.8"

[dev-dependencies]
insta = "1.39.0"